# tensogram

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  HASH_WHILE_ENCODING.md  LICENSE  MUTATION_TESTING.md  Makefile  NOTICE  PLAN_FORTRAN.md  PYTHON_API.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES  ZARR_RESEARCH.md  rust-toolchain.toml
benchmarks/: Cargo.toml  build.rs
benchmarks/benches/: encode_pre_encoded.rs
benchmarks/python/: bench_threading.py  bench_vs_eccodes.py
benchmarks/src/: codec_matrix.rs  constants.rs  datagen.rs  grib_comparison.rs  lib.rs  report.rs
benchmarks/tests/: smoke.rs
cpp/: CMakeLists.txt
cpp/include/: tensogram.h  tensogram.hpp
cpp/tests/: CMakeLists.txt  cross_language_pre_encoded_helper.cpp  test_allow_nan_inf.cpp  test_async_callback.cpp  test_async_coro.cpp  test_async_decode_object_range.cpp  test_async_producer_consumer.cpp  test_async_shutdown_during_flight.cpp  test_async_stdfuture.cpp  test_async_task_control.cpp  test_cargo_c_smoke.sh  test_decode_verify_hash.cpp  test_descriptor.cpp  test_doctor.cpp  test_edge_cases.cpp  test_encode_decode.cpp  test_encode_pre_encoded.cpp  test_error.cpp  test_helpers.hpp  test_iterators.cpp  test_meta_value.cpp  test_metadata.cpp  test_multi_dtype.cpp  test_simple_packing.cpp  test_streaming.cpp  test_strict_finite.cpp  test_validate.cpp
crates/tensogram-cli/: Cargo.toml
crates/tensogram-cli/src/: encoding_args.rs  filter.rs  main.rs  output.rs
crates/tensogram-core/: Cargo.toml
crates/tensogram-core/src/: decode.rs  dtype.rs  encode.rs  error.rs  file.rs  framing.rs  hash.rs  iter.rs  lib.rs  metadata.rs  pipeline.rs  remote.rs  streaming.rs  types.rs  validate.rs  wire.rs
crates/tensogram-core/tests/: adversarial.rs  cross_language_pre_encoded.rs  edge_cases.rs  golden_files.rs  integration.rs  integration_pre_encoded.rs  remote_http.rs
crates/tensogram-encodings/: Cargo.toml
crates/tensogram-encodings/src/: compression.rs  lib.rs  libaec.rs  pipeline.rs  shuffle.rs  simple_packing.rs  zfp_ffi.rs
crates/tensogram-ffi/: Cargo.toml  build.rs  cbindgen.toml  tensogram.h
crates/tensogram-ffi/src/: lib.rs
crates/tensogram-grib/: Cargo.toml
crates/tensogram-grib/src/: converter.rs  error.rs  keys.rs  lib.rs  metadata.rs
crates/tensogram-grib/testdata/: download.sh  lsm.grib2  q_150.grib2
crates/tensogram-grib/tests/: integration.rs
crates/tensogram-python/: Cargo.toml  pyproject.toml
crates/tensogram-python/src/: lib.rs
crates/tensogram-wasm/: Cargo.toml
crates/tensogram-wasm/src/: convert.rs  lib.rs  streaming.rs
crates/tensogram-wasm/tests/: wasm_tests.rs
examples/cpp/: 01_encode_decode.cpp  02_mars_metadata.cpp  02b_generic_metadata.cpp  03_simple_packing.cpp  04_file_api.cpp  05_iterators.cpp  06_hash_and_errors.cpp  07_scan_buffer.cpp  08_decode_variants.cpp  09_streaming_consumer.cpp  10_doctor.cpp  11_encode_pre_encoded.cpp  13_validate.cpp  16_multi_threaded_pipeline.cpp  19_async_decode_remote.cpp  20_async_producer.cpp  21_async_consumer.cpp  22_async_callback.cpp  23_async_stdfuture.cpp  24_async_cancellation.cpp  25_async_decode_object_range.cpp  CMakeLists.txt  README.md
examples/jupyter/: 01_quickstart_and_mars.ipynb  02_encoding_and_fidelity.ipynb  03_from_grib_to_tensogram.ipynb  04_from_netcdf_to_tensogram.ipynb  05_validation_and_parallelism.ipynb  README.md  environment.yml  pyproject.toml
examples/rust/: Cargo.toml  README.md
fortran/: CMakeLists.txt  fpm.toml
fortran/src/: tensogram.F90  tensogram.f90  tgm_append.inc  tgm_encode.inc  tgm_iface.inc  tgm_ranks.inc  tgm_stream_write.inc  tgm_to_array.inc
fortran/test/: check_error_enum.sh  check_value_type_enum.sh  parity_check.py  parity_py_write.py  parity_write.f90  run_parity.cmake  run_xlang.cmake  test_copy_guard.f90  test_dtype_rank.f90  test_edge_cases.f90  test_errors.f90  test_file_api.f90  test_guards.f90  test_metadata.f90  test_metadata_value.f90  test_ranks.f90  test_roundtrip.f90  test_streaming.f90  test_symmetry.f90  xlang_c.cpp  xlang_fortran.f90
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_codec_decode.rs  fuzz_decode.rs  fuzz_decode_metadata.rs  fuzz_decode_object.rs  fuzz_scan.rs  fuzz_validate.rs
python/bindings/: Cargo.toml  README.md  pyproject.toml
python/bindings/src/: lib.rs
python/tensogram-anemoi/: pyproject.toml
python/tensogram-anemoi/tests/: test_tensogram_output.py
python/tensogram-earthkit/: PORT_TO_EARTHKIT_1.0.md  README.md  pyproject.toml
python/tensogram-earthkit/tests/: conftest.py  test_array_namespace.py  test_data_wrapper.py  test_detection.py  test_edge_cases.py  test_encoder.py  test_mars_path.py  test_memory.py  test_nonmars_path.py  test_remote.py  test_source.py  test_streaming.py
python/tensogram-xarray/: README.md  pyproject.toml
python/tensogram-xarray/tests/: test_backend.py  test_coords.py  test_coverage.py  test_edge_cases.py  test_issue_67_descriptor_name_fallback.py  test_merge.py  test_nd_range.py  test_remote.py  test_verify_hash.py
python/tensogram-zarr/: README.md  pyproject.toml
python/tensogram-zarr/tests/: conftest.py  test_coverage.py  test_edge_cases.py  test_issue_67_descriptor_name_fallback.py  test_mapping.py  (+4 more)
rust/benchmarks/: Cargo.toml
rust/tensogram-cli/: Cargo.toml  README.md
rust/tensogram-core-redirect/: Cargo.toml  README.md
rust/tensogram-encodings/: Cargo.toml  README.md  build.rs
rust/tensogram-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  tensogram.h
rust/tensogram-grib/: Cargo.toml  README.md
tensogram-xarray/: pyproject.toml
tensogram-xarray/tests/: conftest.py  test_array.py  test_backend.py  test_coords.py  test_coverage.py  test_edge_cases.py  test_mapping.py  test_merge.py  test_nd_range.py  test_remote.py
tensogram-zarr/: pyproject.toml
tensogram-zarr/tests/: __init__.py  conftest.py  test_coverage.py  test_edge_cases.py  test_mapping.py  test_remote.py  test_roundtrip.py  test_store_read.py  test_store_write.py  test_zarr_integration.py
(+791 files in other folders)
