[workspace]
resolver = "2"
members = [
    "crates/tensogram-core",
    "crates/tensogram-encodings",
    "crates/tensogram-szip",
    "crates/tensogram-cli",
    "crates/tensogram-ffi",
    "examples/rust",
    "benchmarks",
]
# tensogram-python is built via `maturin develop` (PyO3 extension modules
# require the Python linker). It is excluded from default workspace builds.
exclude = [
    "crates/tensogram-python",
    "crates/tensogram-grib",
    "crates/tensogram-netcdf",
    "crates/tensogram-wasm",
]

[workspace.dependencies]
thiserror = "2"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
libaec-sys = "0.1"
tensogram-szip = { path = "crates/tensogram-szip" }
zstd = "0.13"
ruzstd = "0.8"
lz4_flex = "0.11"
blosc2 = { version = "0.2", default-features = false, features = ["zstd", "zlib"] }
blosc2-sys = { package = "blosc2-rs-sys", version = "0.1" }
zfp-sys-cc = "0.2"
sz3 = "0.4"
proptest = "1"

# Prevent panics from unwinding across the FFI boundary (undefined behaviour).
# With panic = "abort", any panic terminates the process immediately.
[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
