[workspace]
resolver = "3"
members = [
    "rust/tensogram-core",
    "rust/tensogram-encodings",
    "rust/tensogram-sz3",
    "rust/tensogram-sz3-sys",
    "rust/tensogram-szip",
    "rust/tensogram-cli",
    "rust/tensogram-ffi",
    "examples/rust",
    "rust/benchmarks",
]
# tensogram-python is built via `maturin develop` (PyO3 extension modules
# require the Python linker). It is excluded from default workspace builds.
exclude = [
    "python/bindings",
    "rust/tensogram-grib",
    "rust/tensogram-netcdf",
    "rust/tensogram-wasm",
]

[workspace.dependencies]
thiserror = "2"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
libaec-sys = "0.1"
tensogram-szip = { path = "rust/tensogram-szip", version = "=0.14.0" }
zstd = { version = "0.13", features = ["zstdmt"] }
ruzstd = "0.8"
lz4_flex = "0.11"
blosc2 = { version = "0.2", default-features = false, features = ["zstd", "zlib"] }
blosc2-sys = { package = "blosc2-rs-sys", version = "0.1" }
zfp-sys-cc = "0.2"
tensogram-sz3 = { path = "rust/tensogram-sz3", version = "=0.14.0" }
tensogram-sz3-sys = { path = "rust/tensogram-sz3-sys", version = "=0.14.0" }
proptest = "1"
rayon = "1"

# Prevent panics from unwinding across the FFI boundary (undefined behaviour).
# With panic = "abort", any panic terminates the process immediately.
[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
