[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tensogram-zarr"
version = "0.10.0"
description = "Zarr v3 store backend for tensogram .tgm files"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "tensogram",
    "zarr>=3.0",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/tensogram_zarr"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "PT", "RUF"]
ignore = ["RUF012", "SIM117"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
